2008-06-23  Steve Falkenburg  <sfalken@apple.com>

        Added our own mechanism for generating temporary file names.
        
        Reviewed by Ada Chan, Darin Adler.

        * platform/win/FileSystemWin.cpp:
        (WebCore::openTemporaryFile):

2008-06-23  Sam Weinig  <sam@webkit.org>

        Remove XMLHttpRequestProgressEvent.cpp from project files.

        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * WebCoreSources.bkl:

2008-06-23  Sam Weinig  <sam@webkit.org>

        Reviewed by Dave Hyatt.

        Remove empty file.

        * xml/XMLHttpRequestProgressEvent.cpp: Removed.

2008-06-23  Sam Weinig  <sam@webkit.org>

        Rubber-stamped by Tim Hatcher.

        Rename XMLHttpRequest::sameOriginRequest to XMLHttpRequest::makeSameOriginRequest
        and XMLHttpRequest::crossSiteAccessRequest to XMLHttpRequest::makeCrossSiteAccessRequest.

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::createRequest):
        (WebCore::XMLHttpRequest::makeSameOriginRequest):
        (WebCore::XMLHttpRequest::makeCrossSiteAccessRequest):
        * xml/XMLHttpRequest.h:

2008-06-23  Sam Weinig  <sam@webkit.org>

        Reviewed by Alexey Proskuryakov.

        Some XMLHttpRequest re-organization to aid further enhancements coming soon.

        * bindings/js/JSXMLHttpRequestCustom.cpp:
        (WebCore::JSXMLHttpRequest::send): Explicitly call overloaded versions of send,
        instead of always calling though send(DOMString).
        * dom/Document.idl: Adds native converter.

        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::open):
        (WebCore::XMLHttpRequest::initSend):
        (WebCore::XMLHttpRequest::send):
        (WebCore::XMLHttpRequest::createRequest):
        (WebCore::XMLHttpRequest::sameOriginRequest):
        (WebCore::XMLHttpRequest::crossSiteAccessRequest):
        (WebCore::XMLHttpRequest::abort):
        (WebCore::XMLHttpRequest::clearResponse):